--- a/style.css
+++ b/style.css
@@ -10,3 +10,16 @@ h1 {
 * {
   border: 1px solid navy;
 }
+
+/*Outer space color palette, from adobe cc*/
+/*#2b448c
+#2a558c
+#5ab8f3
+#a0e3f2
+#0d0d0d
+*/
+
+.highlight {
+  border: 5px solid green;
+  border-radius: 2px;
+}
