--- a/style.css
+++ b/style.css
@@ -19,20 +19,14 @@ h1 {
   font-size: 3em;
 }
 
-.highlight {
-  border: 5px solid #a0e3f2;
-  border-radius: 2px;
-}
-
 p > div {
   margin: auto;
 }
 
-div > img {
+img {
   width: 400px;
   height: 300px;
-  margin: auto;
-  padding: 15px;
+  margin: 10px;
 }
 
 #image1 {
@@ -62,5 +56,9 @@ header {
 }
 
 p {
-  margin-top: 5px;
+  margin: 5px;
+}
+
+.hidden {
+  display: none;
 }
