--- a/style.css
+++ b/style.css
@@ -28,16 +28,17 @@ img {
 }
 
 #image1 {
-  float: center;
   padding-left: 5px;
 }
 
 #image2 {
-  float: center;
+  padding-left: 5px;
 }
 
-#buttons {
-  float: center;
+button {
+  padding: 0 10px;
+  text-transform: none;
+  color: #0d0d0d;
 }
 
 canvas {
